[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["comacrae <comacrae1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.42.0"
geopy = "^2.4.1"
pydeck = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
